all links added

--- a/bootstap_tutorial.html
+++ b/bootstap_tutorial.html
@@ -30,16 +30,52 @@
 	</head>
 
 	<body>
-        <div class="wrapper">
-            <div class="content">
-                <h1>Main Page</h1>
-                <p>Some content goes here.......</p>
-            </div>
-        </div>
-        <footer>
-            <p>
-                &copy; 2024 My Website | All rights reserved
-            </p>
-        </footer>
-    </body>
+		<div class="wrapper">
+			<div class="content">
+				<h1>Main Page</h1>
+				<p>Some content goes here.......</p>
+			</div>
+		</div>
+		<footer class="bg-dark text-white pt-4 pb-1 text-center">
+			<div class="container">
+				<div class="row">
+					<!-- Socials Section -->
+					<div class="col">
+						<h5>Follow us</h5>
+						<ul class="list-unstyled">
+							<li><a href="#">Facebook</a></li>
+							<li><a href="#">Twitter</a></li>
+							<li><a href="#">Instagram</a></li>
+							<li><a href="#">Linkedin</a></li>
+						</ul>
+					</div>
+
+					<!-- Contact us section -->
+					<div class="col">
+						<h5>Contact Us</h5>
+
+						<p><a href="tel:+155555555">555-555-5555</a></p>
+						<p>
+							<a href="mailto:user.example@gmail.com"
+								>user.example@gmail.com</a
+							>
+						</p>
+					</div>
+					<!-- Additional Links -->
+					<div class="col">
+						<h5>Additional Links</h5>
+
+						<p><a href="#">Privacy Policy</a></p>
+						<p>
+							<a href="#">Terms of Service</a>
+						</p>
+                        <p>
+							<a href="#">FAQ</a>
+						</p>
+					</div>
+					<p>&copy; 2024 My Website | All rights reserved</p>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
